# CSC232-Previous-Work

./: README.md
Previous Work/HW06-Bank-Sim-cdtinen/: CMakeLists.txt  README.md
Previous Work/HW06-Bank-Sim-cdtinen/src/main/cpp/: Event.cpp  Event.h  Main.cpp  Node.cpp  Node.h  PriorityQueue.cpp  PriorityQueue.h  Queue.cpp  Queue.h
Previous Work/hw01-the-big-five-cdtinen/: .gitignore  CMakeLists.txt  README.md
Previous Work/hw01-the-big-five-cdtinen/generator/: README.md
Previous Work/hw01-the-big-five-cdtinen/src/main/cpp/: Demo.cpp  Main.cpp  Rectangle.cpp  Rectangle.h
Previous Work/hw01-the-big-five-cdtinen/src/test/cpp/: RectangleUnitTest.cpp  RectangleUnitTest.h  TestDriver.h
Previous Work/hw02-ackermanns-function-cdtinen/: .gitignore  CMakeLists.txt  README.md
Previous Work/hw02-ackermanns-function-cdtinen/generator/: README.md
Previous Work/hw02-ackermanns-function-cdtinen/src/main/cpp/: AckerCommand.cpp  AckerCommand.h  AckerInvoker.cpp  AckerInvoker.h  AckerReceiver.cpp  AckerReceiver.h  Command.h  Demo.cpp  Main.cpp
Previous Work/hw02-ackermanns-function-cdtinen/src/test/cpp/: AckerReceiverUnitTest.cpp  AckerReceiverUnitTest.h
Previous Work/hw03-array-set-bag-cdtinen/: CMakeLists.txt  README.md
Previous Work/hw03-array-set-bag-cdtinen/src/main/cpp/: ArrayBag.cpp  ArrayBag.h  BagInterface.h  Demo.cpp  Main.cpp  SetArrayBag.cpp  SetArrayBag.h
Previous Work/hw03-array-set-bag-cdtinen/src/test/cpp/: DifferenceOperationsUnitTest.cpp  DifferenceOperationsUnitTest.h  IntersectionOperationsUnitTest.cpp  IntersectionOperationsUnitTest.h  UnionOperationsUnitTest.cpp  UnionOperationsUnitTest.h
Previous Work/hw04-language-recognition-cdtinen/: .gitignore  CMakeLists.txt  README.md
Previous Work/hw04-language-recognition-cdtinen/generator/: README.md
Previous Work/hw04-language-recognition-cdtinen/images/: hw04.uxf  hw04.xcf
Previous Work/hw04-language-recognition-cdtinen/src/main/cpp/: Demo.cpp  LanguageProcessor.h  XyzLanguageProcessor.cpp  XyzLanguageProcessor.h
Previous Work/hw04-language-recognition-cdtinen/src/test/cpp/: UnitTestRunner.cpp  XyzLanguageProcessorUnitTest.cpp  XyzLanguageProcessorUnitTest.h
Previous Work/hw05-resizable-stack-array-cdtinen/: .gitignore  CMakeLists.txt  README.md
Previous Work/hw05-resizable-stack-array-cdtinen/images/: hw05.uxf  hw05.xcf
Previous Work/hw05-resizable-stack-array-cdtinen/src/main/cpp/: Main.cpp  ResizableArrayStack.h  StackInterface.h
Previous Work/hw05-resizable-stack-array-cdtinen/src/test/cpp/: UnitTestRunner.cpp
Previous Work/hw07-dp-gold-coins-cdtinen/: CMakeLists.txt  README.md  hw07.cpp  input.txt
Previous Work/lab01-cmake-cdtinen/: .gitignore  CMakeLists.txt  README.md
Previous Work/lab01-cmake-cdtinen/generator/: README.md
Previous Work/lab01-cmake-cdtinen/src/main/cpp/: Demo.cpp  IntCell.cpp  IntCell.h  Main.cpp
Previous Work/lab01-cmake-cdtinen/src/test/cpp/: IntCellUnitTest.cpp  IntCellUnitTest.h
Previous Work/lab02-compiling-template-classes-cdtinen/: CMakeLists.txt  README.md
Previous Work/lab02-compiling-template-classes-cdtinen/src/main/cpp/: Cell.cpp  Cell.h  Demo.cpp  ExpandedTemplates.h  Main.cpp  MemoryCell.cpp  MemoryCell.h  SimpleMemoryCell.h
Previous Work/lab02-compiling-template-classes-cdtinen/src/test/cpp/: MemoryCellUnitTest.cpp  MemoryCellUnitTest.h
Previous Work/lab03-intro-to-dynamic-programming-cdtinen/: .gitignore  CMakeLists.txt  LICENSE  README.md
Previous Work/lab03-intro-to-dynamic-programming-cdtinen/src/main/cpp/: BottomUpFibCalculator.cpp  BottomUpFibCalculator.h  Demo.cpp  FibCalculator.h  Main.cpp  TopDownFibCalculator.cpp  TopDownFibCalculator.h
Previous Work/lab03-intro-to-dynamic-programming-cdtinen/src/test/cpp/: BottomUpFibCalculatorTest.cpp  BottomUpFibCalculatorTest.h  TestUtils.cpp  TopDownFibCalculatorTest.cpp  TopDownFibCalculatorTest.h  UnitTestRunner.cpp
Previous Work/lab04-resizeable-array-cdtinen/: .gitignore  CMakeLists.txt  LICENSE  README.md  template-method.uxf
Previous Work/lab04-resizeable-array-cdtinen/generator/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake
Previous Work/lab04-resizeable-array-cdtinen/src/main/cpp/: AbstractClass.h  ArrayBag.cpp  ArrayBag.h  Bag.h  BumpStrategy.cpp  BumpStrategy.h  Demo.cpp  DoublingStrategy.cpp  DoublingStrategy.h  ExpandedTemplates.cpp  Main.cpp  ResizableArrayBag.cpp  ResizableArrayBag.h  ResizingStrategy.h  SubClass1.h  SubClass2.h
Previous Work/lab04-resizeable-array-cdtinen/src/test/cpp/: ResizeableArrayBagUnitTest.cpp  ResizeableArrayBagUnitTest.h  UnitTestRunner.cpp
Previous Work/lab06-stl-stack-cdtinen/: CMakeLists.txt  README.md
Previous Work/lab06-stl-stack-cdtinen/src/main/cpp/: Demo.cpp  Main.cpp
Previous Work/lab06-stl-stack-cdtinen/src/test/cpp/: UnitTestRunner.cpp
Previous Work/lab07-smart-pointers-cdtinen/: lab07a.cpp  lab07b.cpp  questions.txt
Previous Work/lab08-stacks-and-queues-oh-my-cdtinen/: CMakeLists.txt  README.md
Previous Work/lab08-stacks-and-queues-oh-my-cdtinen/img/: lab08-uml.uxf
Previous Work/lab08-stacks-and-queues-oh-my-cdtinen/src/main/cpp/: Demo.cpp  ExpandedTemplates.cpp  Main.cpp  Palindrome.h  Palindrominator.cpp  Palindrominator.h
Previous Work/lab08-stacks-and-queues-oh-my-cdtinen/src/test/cpp/: PalindrominatorUnitTest.cpp  PalindrominatorUnitTest.h
Previous Work/lab09-friends-files-cdtinen/: .gitignore  CMakeLists.txt  README.md
Previous Work/lab09-friends-files-cdtinen/src/main/cpp/: Demo.cpp  HealthTracker.cpp  HealthTracker.h  Main.cpp
Previous Work/lab11-iterators-cdtinen/: CMakeLists.txt  LinkedIterator.cpp  LinkedIterator.h  LinkedList.cpp  LinkedList.h  List.h  Node.cpp  Node.h  PrecondViolatedExcep.cpp  PrecondViolatedExcep.h  README.md  lab11.h  main.cpp
Previous Work/lab12-dp-jumpit-cdtinen/: CMakeLists.txt  Game.h  JumpItGame.cpp  JumpItGame.h  README.md  lab12.txt  main.cpp
